fix: multiple layout issues

--- a/client/src/components/layouts/FilePreviewGalleryLayout/index.scss
+++ b/client/src/components/layouts/FilePreviewGalleryLayout/index.scss
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    overflow: hidden;
     .btn {
       outline: none;
       background-color: transparent;
@@ -27,6 +28,8 @@
     }
     .frame {
       position: relative;
+      border: 0;
+      height: 100%;
       .overlay-left {
         position: absolute;
         background-color: transparent;
